small CSS changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     ░░░█░█░█░█▀▀░░░▀▀█░░░█░░░█▀█░█▀▄░░█░░█░█
     ░▀▀░░▀▀▀░▀▀▀░░░▀▀▀░░░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀
     </pre>
-    <p>Hello friend!</p>
+    <p>Welcome to my cabin traveller! Please look around and help yourself to anything here.</p>
 </body>
 </html>
