Changed Link Colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ░▀▀░░▀▀▀░▀▀▀░░░▀▀▀░░░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀
     </pre>
     <p>Welcome to my cabin traveller! Please look around and help yourself to anything here.</p>
-    <a href="introduction.html">So, you want to know more about me huh?</a>
+    <a href="introduction.html">So, you want to know more about me huh?</a> <br>  
     <a href="tinylog.html">These are some of the things that might go on in my head.</a>
 </body>
 </html>
